force-app/main/default/objects/Metadata_Component_Reference__c/Metadata_Component_Reference__c.object-meta.xml
<CustomObject>
    <label>Metadata Component Reference</label>
    <nameField>
        <displayFormat>MCR-{000000}</displayFormat>
        <label>Metadata Component Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Component References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>