force-app/main/default/objects/Metadata_Component_Reference__c/fields/Component_Namespace__c.field-meta.xml
<CustomField>
    <fullName>Component_Namespace__c</fullName>
    <label>Component Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>