force-app/main/default/objects/Metadata_Component_Reference__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ApexClass</fullName>
            </value>
            <value>
                <fullName>ApexComponent</fullName>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
            </value>
            <value>
                <fullName>CustomField</fullName>
            </value>
            <value>
                <fullName>EmailTemplate</fullName>
            </value>
            <value>
                <fullName>FieldSet</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Layout</fullName>
            </value>
            <value>
                <fullName>LookupFilter</fullName>
            </value>
            <value>
                <fullName>ValidationRule</fullName>
            </value>
            <value>
                <fullName>WorkflowFieldUpdate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>