force-app/main/default/objects/Metadata_Component_Reference__c/fields/Data_Field__c.field-meta.xml
<CustomField>
    <fullName>Data_Field__c</fullName>
    <label>Data Field</label>
    <referenceTo>Data_Field__c</referenceTo>
    <relationshipLabel>Metadata Component References</relationshipLabel>
    <relationshipName>Metadata_Component_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>